--- a/app/templates/forum.html
+++ b/app/templates/forum.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Forums</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forgot Password</title>
@@ -51,7 +52,9 @@
             <div class="search-bar">
                 <input type="text" id="search-input" placeholder="Search for threads...">
             </div>
-            <button class="submit-question">Submit a new question</button>
+            <a href="/newforum">
+                <button class="submit-question">Submit a new question</button>
+            </a>
         </div>
     
         <div class="threads-list" id="threads-list">
