This gives a universal css file for the forums and also allows forums to work in 1db where messaegs are displayed by topic (the forum page name)

--- a/app/templates/Fishing.html
+++ b/app/templates/Fishing.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Gaming Forum</h1>
+        <h1>Fishing Forum</h1>
         <div id="chat-container">
             <!-- Chats will be dynamically loaded here -->
         </div>
@@ -19,6 +19,6 @@
         </div>
     </div>
 
-    <script  src="/static/forumsJS/gaming.js"></script>
+    <script  src="/static/forumsJS/fishing.js"></script>
 </body>
 </html>
