Made a seperate htmlfile for navbar and flashes

--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,7 +1,7 @@
 {%extends "public.html" %}
 {% block title %}Sign Up Page{% endblock %}
 
-{%block head%}
+{%block head%%}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
@@ -10,7 +10,7 @@
     
 {%endblock%}
     
-</head>
+
 {% block body %}
 
     <div class = "container">
