--- a/app/templates/loginpage.html
+++ b/app/templates/loginpage.html
@@ -1,51 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+{%extends "public.html" %}
+{% block title %}Log in Page{% endblock %}
+
+{%block head%}
     
     
     <link rel="stylesheet" href="/static/styles.css">
     <link rel="stylesheet" href="/static/login.css">
     
+{%endblock%}
+    
 </head>
-<body>
-   
-    <div class = "container">
-        {% with messages = get_flashed_messages() %}
-            {% if messages %}
-                {% for message in messages%}
-                    <p> {{message}} </p>
-                {% endfor %}
-            {% endif %}
-        {% endwith %}
-        <div id="loginPage" class= "loginPage">
-            <h2 id = "logintitle">Login</h2> 
-            <form id="loginForm" class="loginForm" method="POST" action="{{ url_for('login') }}">
-                <div class="input">
-                    <label for="username">Username:</label>
-                    <input type="text" id="username" name="username" placeholder="User name / Email" required>
-                </div>
-                <div class="input">
-                    <label for="password">Password:</label>
-                    <input type="password" id="password" name="password"  placeholder="password"required>
-                </div>
-                <button id="loginButton" type="submit" class = "button">Login</button>
-            </form>
-            
-            <div class="otherLinks">
-                <p class="forgotpassword">
-                    <a href = "/forgotpassword"> Forgot your password?</a>
-                </p>
-                <span> or </span>
-                <p class="noAccount"> 
-                    <a href= "/signup"> Don't have an account?</a>
-                </p>
-            </div>
-        </div>
+{% block body %}
 
+<div class = "container">
+    <div id="loginPage" class= "loginPage">
+        <h2 id = "logintitle">Login</h2> 
+        <form id="loginForm" class="loginForm" method="POST" action="{{ url_for('login') }}">
+            <div class="input">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" placeholder="User name / Email" required>
+            </div>
+            <div class="input">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password"  placeholder="password"required>
+            </div>
+            <button id="loginButton" type="submit" class = "button">Login</button>
+        </form>
+        
+        <div class="otherLinks">
+            <p class="forgotpassword">
+                <a href = "/forgotpassword"> Forgot your password?</a>
+            </p>
+            <span> or </span>
+            <p class="noAccount"> 
+                <a href= "/signup"> Don't have an account?</a>
+            </p>
+        </div>
     </div>
+
     <script src="/static/login.js"></script>
-</body>
-</html>
+</div>
+{% endblock %}
+    
+    
