--- a/app/templates/public.html
+++ b/app/templates/public.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/static/navbar.css">
     <link rel="stylesheet" href="/static/styles.css">
     <title>{% block title %}{% endblock %}</title>
@@ -58,8 +61,11 @@
                 {% endfor %}
             {% endif %}
         {% endwith %}
+
+        <main>
+            {%block body %}{% endblock%}
+        </main>
     
 </body>
-<main>
-    {%block body %}{% endblock%}
+
 </html>
