--- a/app/templates/forumtemplate.html
+++ b/app/templates/forumtemplate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Forums</title>
+    <title>Create New Forum</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forgot Password</title>
@@ -9,11 +9,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/static/styles.css">
-    <link rel="stylesheet" href="/static/forum.css">
+    <link rel="stylesheet" href="/static/newforum.css">
     <link rel="stylesheet" href="/static/navbar.css">
 
 </head>
-
 <body>
     <nav class="navbar">
         <div class="navbar-left">
@@ -23,7 +22,7 @@
                     <a href="HomePage">Home</a>
                 </li>
                 <li class="Forums">
-                    <a href="/Forums">Forums</a>
+                    <a href="{{ url_for('Forums') }}">Forums</a>
                 </li>
             </ul>
         </div>
@@ -46,25 +45,21 @@
             {% endif %}
         </div>
     </nav>
-
-    <div class="forum-container">
-        <div class="top-section">
-            <div class="search-bar">
-                <input type="text" id="search-input" placeholder="Search for threads...">
-            </div>
-            <a href="{{ url_for('newforum') }}">
-                <button class="submit-question">Submit a new question</button>
-            </a>
-        </div>
     
-        <div class="threads-list" id="threads-list">
-            {% for forum in forums %}
-                <a class="btn btn-default btn-lg thread" href="{{ url_for('forum', topic=forum.topic) }}">{{ forum.topic }}</a>
+    <div class="container">
+        <h1>{{ forum.topic }} Forum</h1>
+        <div id="chat-container">
+            <!-- Chats will be dynamically loaded here -->
+            {% for message in forum.messages %}
+            <p>{{ message.username }}: {{ message.text }}</p>
             {% endfor %}
+        </div>
+        <div class="chat-input">
+            <input type="text" id="chat-message" placeholder="Type your message here...">
+            <button onclick="sendChat()">Send</button>
         </div>
     </div>
 
-    <script src="/static/forum.js"></script>  
-
+    <script  src="/static/forumtemplate.js"></script>
 </body>
 </html>
