--- a/app/static/navbar.css
+++ b/app/static/navbar.css
@@ -1,6 +1,9 @@
 * { 
     box-sizing: border-box;
 }
+body{
+    margin: 0; 
+}
 
 nav { 
     background: black;
@@ -9,6 +12,7 @@ nav {
 a { 
     color: white;
     align-items: center;
+    text-decoration: none;
 }
 
 a:hover {
@@ -26,7 +30,7 @@ a:hover {
     position: fixed;
     padding: 0.25%;
     box-shadow: 0 2px 5px grey;
-    border-radius: 30px;
+    border-radius: 0px;
     top: 1%;
     width: 100%;
     display: flex;
@@ -47,15 +51,16 @@ a:hover {
     margin-left: 10px; 
     padding: 0;
     align-items: center;
+    flex: 1;
 }
 
 .navitem {
-    margin-left: 10px; /* Adjust this value to control the space between links */
+    margin-left: 10px; 
     align-items: center;
 }
 
 .navbutton, .navbutton2, .logout {
-    margin-left: 20px;
+    margin-left: 10px;
     border-radius: 15px;
 }
 
@@ -67,4 +72,8 @@ a:hover {
 .navbar {
     position: relative;
     z-index: 1;
+}
+a { 
+    color: white;
+    align-items: center;
 }
