--- a/app/templates/forgotpassword.html
+++ b/app/templates/forgotpassword.html
@@ -22,7 +22,7 @@
                     <a href="HomePage">Home</a>
                 </li>
                 <li class="Forums">
-                    <a href="{{ url_for('Forums') }}">Forums</a>
+                    <a href="{{ url_for('forums') }}">Forums</a>
                 </li>
             </ul>
         </div>
