--- a/app/templates/newforum.html
+++ b/app/templates/newforum.html
@@ -22,7 +22,7 @@
                     <a href="HomePage">Home</a>
                 </li>
                 <li class="Forums">
-                    <a href="{{ url_for('Forums') }}">Forums</a>
+                    <a href="{{ url_for('forums') }}">Forums</a>
                 </li>
             </ul>
         </div>
@@ -47,12 +47,10 @@
     </nav>
     <div class="container">
         <h1>Create New Post</h1>
-        <form action="/submit_new_forum" method="post">
-            <label for="title">Title:</label><br>
-            <input type="text" id="title" name="title" required><br>
-            <label for="post">Post:</label><br>
-            <textarea id="post" name="post" rows="7" cols="50" required></textarea><br>
-            <input type="submit" value="Submit">
+        <form method="POST" action="{{ url_for('submit_new_forum') }}">
+            <input type="text" name="title" placeholder="Forum Title">
+            <textarea name="post" placeholder="Your Message"></textarea>
+            <input type="submit" value="Create Forum">
         </form>
     </div>
 </body>
