--- a/app/templates/forumtemplate.html
+++ b/app/templates/forumtemplate.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/static/styles.css">
-    <link rel="stylesheet" href="/static/newforum.css">
+    <link rel="stylesheet" href="/static/forumtemplate.css">
     <link rel="stylesheet" href="/static/navbar.css">
 
 </head>
