--- a/app/templates/Fishing.html
+++ b/app/templates/Fishing.html
@@ -1,13 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gaming Forum</title>
+{%extends "public.html" %}
+{% block title %}Fishing Forum{% endblock %}
+
+{%block head%}
+    
+    
+    
     <link rel="stylesheet" href="/static/allForums.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-</head>
-<body>
+
+    {%endblock%}
+    
+
+{% block body %}
     <div class="container">
         <h1>Fishing Forum</h1>
         <div id="chat-container">
@@ -20,5 +24,9 @@
     </div>
 
     <script  src="/static/forumsJS/fishing.js"></script>
-</body>
-</html>
+{% endblock %}
+    
+    
+
+    
+
