--- a/app/templates/newforum.html
+++ b/app/templates/newforum.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Create New Forum</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forgot Password</title>
+{%extends "public.html" %}
+{% block title %}New forum{% endblock %}
+
+{%block head%}
+    
+    
+    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
@@ -12,39 +12,10 @@
     <link rel="stylesheet" href="/static/newforum.css">
     <link rel="stylesheet" href="/static/navbar.css">
 
-</head>
-<body>
-    <nav class="navbar">
-        <div class="navbar-left">
-            <span>Go to:</span>
-            <ul class="navbar-middle">
-                <li class="navitem">
-                    <a href="HomePage">Home</a>
-                </li>
-                <li class="Forums">
-                    <a href="{{ url_for('Forums') }}">Forums</a>
-                </li>
-            </ul>
-        </div>
-        <div class="navbar-right">
-            {% if session.user %}
-                <li class="logout">
-                    <a class="btn btn-default btn-sm" href="{{ url_for('logout')}}">
-                        <span class="glyphicon glyphicon-log-out"></span> Log out
-                    </a>
-                </li>
-            {% else %}
-                <li class="navbutton">
-                    <a class="btn btn-default btn-sm" href="{{ url_for('login') }}">
-                        <span class="glyphicon glyphicon-log-in"> login </span></a>  
-                </li>
-                <li class="navbutton2">
-                    <a class="btn btn-default btn-sm" href="{{ url_for('signup') }}">
-                        <span class="glyphicon glyphicon-circle-arrow-up"> signup </span></a> 
-                </li>
-            {% endif %}
-        </div>
-    </nav>
+    {%endblock%}
+    
+
+{% block body %}
     <div class="container">
         <h1>Create New Post</h1>
         <form action="/submit_new_forum" method="post">
@@ -55,5 +26,8 @@
             <input type="submit" value="Submit">
         </form>
     </div>
-</body>
-</html>
+{% endblock %}
+    
+    
+
+    
