--- a/app/static/forumtemplate.css
+++ b/app/static/forumtemplate.css
@@ -16,7 +16,6 @@ body{
     display: flex;
     height: 90vh;
     flex-direction: column;
-    align-items: center;
     width: 40%;
     margin: 0 auto;
     margin-top: 60px;
@@ -24,6 +23,7 @@ body{
     padding-top: 40px;
     border-radius: 20px;
     padding-bottom: 30px;
+    text-align: left; /* Add this line */
 }
 
 h1 {
@@ -55,18 +55,3 @@ h1 {
     border: 1px solid #ccc;
 }
 
-.chat-input button {
-    padding: 10px 20px;
-    border: none;
-    background-color: #007BFF;
-    color: white;
-    cursor: pointer;
-}
-.container input[type="text"], .container textarea {
-    width: 100%;
-    padding: 12px 20px;
-    margin-top: 0; /* Explicitly set to 0 */
-    margin-bottom: 8px;
-    box-sizing: border-box;
-    font-size: 14px;
-}
