overwriting files to the branch Forums version where user's are working and creating forums work

--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,15 +1,25 @@
-{%extends "public.html" %}
-{% block title %}Sign Up Page{% endblock %}
-
-{%block head%}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sign up page</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/static/styles.css">
     <link rel="stylesheet" href="/static/signup.css">
+    <link rel="stylesheet" href="/static/navbar.css">
     
-{%endblock%}
-    
+</head>
+<body>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages%}
+                <p> {{message}} </p>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
 
     <nav class="navbar">
         <div class="navbar-left">
@@ -69,4 +79,5 @@
 
 
 </div>
-{% endblock %}
+</body>
+</html>
