--- a/app/static/navbar.css
+++ b/app/static/navbar.css
@@ -1,9 +1,6 @@
 * { 
     box-sizing: border-box;
 }
-body{
-    margin: 0; 
-}
 
 nav { 
     background: black;
@@ -12,7 +9,6 @@ nav {
 a { 
     color: white;
     align-items: center;
-    text-decoration: none;
 }
 
 a:hover {
@@ -30,7 +26,7 @@ a:hover {
     position: fixed;
     padding: 0.25%;
     box-shadow: 0 2px 5px grey;
-    border-radius: 0px;
+    border-radius: 30px;
     top: 1%;
     width: 100%;
     display: flex;
@@ -51,29 +47,19 @@ a:hover {
     margin-left: 10px; 
     padding: 0;
     align-items: center;
-    flex: 1;
 }
 
 .navitem {
-    margin-left: 10px; 
+    margin-left: 10px; /* Adjust this value to control the space between links */
     align-items: center;
 }
 
 .navbutton, .navbutton2, .logout {
-    margin-left: 10px;
+    margin-left: 20px;
     border-radius: 15px;
 }
 
 .navbar-right {
     display: flex;
-    align-items: center;
-}
-
-.navbar {
-    position: relative;
-    z-index: 1;
-}
-a { 
-    color: white;
     align-items: center;
 }
