--- a/app/templates/loginpage.html
+++ b/app/templates/loginpage.html
@@ -1,18 +1,25 @@
-{%extends "public.html" %}
-{% block title %}Log in Page{% endblock %}
-
-{%block head%}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple Web App</title>
     
     
     <link rel="stylesheet" href="/static/styles.css">
     <link rel="stylesheet" href="/static/login.css">
     
-{%endblock%}
-    
-
-{% block body %}
-
+</head>
+<body>
+   
     <div class = "container">
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages%}
+                    <p> {{message}} </p>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
         <div id="loginPage" class= "loginPage">
             <h2 id = "logintitle">Login</h2> 
             <form id="loginForm" class="loginForm" method="POST" action="{{ url_for('login') }}">
@@ -38,8 +45,7 @@
             </div>
         </div>
 
-        <script src="/static/login.js"></script>
     </div>
-{% endblock %}
-    
-    
+    <script src="/static/login.js"></script>
+</body>
+</html>
