--- a/app/templates/forumtemplate.html
+++ b/app/templates/forumtemplate.html
@@ -49,17 +49,16 @@
 
     <div class="container">
         <h1>{{ forum.topic }}</h1>
-        <p>Created by: {{ username }}</p>
+        <p>Created by: {{ creator }}</p>
         <ul>
-            {% for message in messages %}
-                <li>{{ message.content }}</li>
+            {% for message, username in messages %}
+                <p>{{ username }}: {{ message.content }}</p>
             {% endfor %}
         </ul>
         <form method="POST">
             <textarea name="content" placeholder="Your Message"></textarea>
             <input type="submit" value="Post Message">
         </form>
-        </div>
     </div>
 
     <script  src="/static/forumtemplate.js"></script>
