fixed the link from a forum to homepage in navbarlink

--- a/app/templates/forumtemplate.html
+++ b/app/templates/forumtemplate.html
@@ -20,7 +20,7 @@
             <span>Go to:</span>
             <ul class="navbar-middle">
                 <li class="navitem">
-                    <a href="HomePage">Home</a>
+                    <a href="{{ url_for('HomePage') }}">Home</a>
                 </li>
                 <li class="Forums">
                     <a href="{{ url_for('forums') }}">Forums</a>
