--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -9,10 +9,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/static/styles.css">
     <link rel="stylesheet" href="/static/signup.css">
-    <link rel="stylesheet" href="/static/navbar.css">
     
 </head>
 <body>
+    {% include 'navbar.html' %}
+    
     {% with messages = get_flashed_messages() %}
         {% if messages %}
             {% for message in messages%}
@@ -20,38 +21,6 @@
             {% endfor %}
         {% endif %}
     {% endwith %}
-
-    <nav class="navbar">
-        <div class="navbar-left">
-            <span>Go to:</span>
-            <ul class="navbar-middle">
-                <li class="navitem">
-                    <a href="HomePage">Home</a>
-                </li>
-                <li class="Forums">
-                    <a href="{{ url_for('forums') }}">Forums</a>
-                </li>
-            </ul>
-        </div>
-        <div class="navbar-right">
-            {% if session.user %}
-                <li class="logout">
-                    <a class="btn btn-default btn-sm" href="{{ url_for('logout')}}">
-                        <span class="glyphicon glyphicon-log-out"></span> Log out
-                    </a>
-                </li>
-            {% else %}
-                <li class="navbutton">
-                    <a class="btn btn-default btn-sm" href="{{ url_for('login') }}">
-                        <span class="glyphicon glyphicon-log-in"> login </span></a>  
-                </li>
-                <li class="navbutton2">
-                    <a class="btn btn-default btn-sm" href="{{ url_for('signup') }}">
-                        <span class="glyphicon glyphicon-circle-arrow-up"> signup </span></a> 
-                </li>
-            {% endif %}
-        </div>
-    </nav>
 
     <div class = "container">
         <div id="loginPage" class= "loginPage">
