--- a/app/static/navbar.css
+++ b/app/static/navbar.css
@@ -1,32 +1,28 @@
-* { 
+* {
     box-sizing: border-box;
 }
-body{
-    margin: 0; 
-    
+body {
+    margin: 0;
 }
+
 .home-text {
     font-family: Arial, Helvetica, sans-serif;
 }
-nav { 
+nav {
     background: black;
 }
-
-a { 
+a {
     color: white;
-    align-items: center;
+    text-align: center;
 }
-
 a:hover {
     text-decoration: underline;
     color: rgb(67, 67, 192);
 }
-
 .navbar li {
     padding: 15px;
     list-style-type: none;
 }
-
 .navbar {
     z-index: 1000;
     position: fixed;
@@ -34,52 +30,46 @@ a:hover {
     box-shadow: 0 2px 5px grey;
     border-radius: 30px;
     top: 1%;
-    width: 100%;
+    width: calc(100% - 20px); /* Make the navbar slightly narrower */
+    margin: 0 10px; /* Add margin to the left and right */
+    padding-left: 25px; /* Add padding to the left */
+    padding-right: 25px; /* Add padding to the right */
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+    background: black;
+    margin-bottom: 20px; /* Added margin-bottom to create space */
 }
-
 .navbar-left {
     display: flex;
     align-items: center;
     font-size: 20px;
     color: white;
 }
-
 .navbar-middle {
     display: flex;
     list-style-type: none;
-    margin-left: 10px; 
+    margin-bottom: 0px;
+    margin-left: 10px;
     padding: 0;
     align-items: center;
 }
-
 .navitem {
-   
-    margin-left: 10px; 
-    align-items: center;
+    margin-left: 10px;
 }
-
 .navbutton, .navbutton2, .logout {
     margin-left: 20px;
     border-radius: 15px;
 }
-
 .navbar-right {
     display: flex;
     align-items: center;
-    margin-left: 1000px;
+    margin-left: auto; /* Ensure it aligns to the right */
 }
-
-.navbar {
-    position: relative;
-    z-index: 1;
-}
-a { 
-    color: white;
+.navbar-right .navbar-buttons {
+    display: flex;
     align-items: center;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
-
-
