--- a/app/templates/forum.html
+++ b/app/templates/forum.html
@@ -10,42 +10,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/static/styles.css">
     <link rel="stylesheet" href="/static/forum.css">
-    <link rel="stylesheet" href="/static/navbar.css">
 
 </head>
 
 <body>
-    <nav class="navbar">
-        <div class="navbar-left">
-            <span>Go to:</span>
-            <ul class="navbar-middle">
-                <li class="navitem">
-                    <a href="HomePage">Home</a>
-                </li>
-                <li class="Forums">
-                    <a href="/Forums">Forums</a>
-                </li>
-            </ul>
-        </div>
-        <div class="navbar-right">
-            {% if session.user %}
-                <li class="logout">
-                    <a class="btn btn-default btn-sm" href="{{ url_for('logout')}}">
-                        <span class="glyphicon glyphicon-log-out"></span> Log out
-                    </a>
-                </li>
-            {% else %}
-                <li class="navbutton">
-                    <a class="btn btn-default btn-sm" href="{{ url_for('login') }}">
-                        <span class="glyphicon glyphicon-log-in"> login </span></a>  
-                </li>
-                <li class="navbutton2">
-                    <a class="btn btn-default btn-sm" href="{{ url_for('signup') }}">
-                        <span class="glyphicon glyphicon-circle-arrow-up"> signup </span></a> 
-                </li>
-            {% endif %}
-        </div>
-    </nav>
+    {% include 'navbar.html' %}
 
     <div class="forum-container">
         <div class="top-section">
