--- a/app/templates/loginpage.html
+++ b/app/templates/loginpage.html
@@ -13,6 +13,15 @@
 </head>
 <body>
     {% include 'navbar.html' %}
+
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages%}
+                <p> {{message}} </p>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+    
     <div class = "container">
         
         <div id="loginPage" class= "loginPage">
