--- a/app/templates/HomePage.html
+++ b/app/templates/HomePage.html
@@ -12,6 +12,14 @@
 
 </head>
 <body>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages%}
+                <p> {{message}} </p>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+    
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-8 text-center">
