--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -41,7 +41,7 @@
                 <div class = "input">
                     <label for = "password"> Confirm password: </label>
                     <input type = "password" id = "confpsw" name = "confpsw" placeholder = "confirm password" required>
-                <button id="loginButton" type="submit" class = "button">Sign up</button>
+                <button id="signUp" type="submit" class = "button">Sign up</button>
                 <a id="loginButton" href = "{{ url_for('login') }}" >Already have an account? Click here!</a>
             </form>
         </div>
