implemented fixed reload issue so it doesn't send mutliple posts after reloading page and changed the create forum button to say 'Ask the Community'

--- a/app/templates/forum.html
+++ b/app/templates/forum.html
@@ -22,7 +22,7 @@
                 <input type="text" id="search-input" placeholder="Search for threads...">
             </div>
             <a href="{{ url_for('newforum') }}">
-                <button class="submit-question">Submit a new question</button>
+                <button class="submit-question">Ask the Community</button>
             </a>
         </div>
     
