--- a/app/templates/forumtemplate.html
+++ b/app/templates/forumtemplate.html
@@ -33,7 +33,7 @@
                 </div>
             {% endfor %}
         </div>
-        <form id="message-form" method="POST">
+        <form method="POST">
             <textarea name="content" placeholder="Your Message"></textarea>
             <input type="submit" value="Post Message">
         </form>
